--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         </div>
       </div>
     </div>
+    <p>
+      <a
+        href="https://github.com/K-mone/weather-app"
+        class="open-source"
+        target="_blank"
+        rel="noreferrer"
+        >open-source-code</a
+      >
+      by K
+    </p>
     <script src="src/js.js"></script>
   </body>
 </html>
